# my_bots

./: README.md  main_bot.py  ne_pavyk.py  pyproject.toml  test Finite State Machine(FSM).py  test_admin.py  test_book_bot.py  test_dannie_iz_filter.py  test_echo_bot.py  test_edit_anytype_msg.py  test_edit_message.py  test_found_numbers.py  test_inline_callback+alert.py  test_inline_callback_button.py  test_inline_url_button.py  test_keyboard.py  test_parse_mode.py  test_set_menu.py  test_stone_game.py  test_ygadai_number_bot.py
books/: book_test.txt
config_data/: .env.example  config.py
handlers/: main_user.py  other.py  user.py
keyboards/: bookmarks_kb.py  keyboards.py  main_keyboards.py  pagination_kb.py  set_menu.py
lexicon/: main_ru.py  ru.py
services/: file_handling.py  services.py
